--- a/package.json
+++ b/package.json
@@ -45,20 +45,24 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0",
+    "formik": "^2.4.5",
+    "framer-motion": "^11.0.24",
     "input-otp": "^1.0.1",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.0",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-resizable-panels": "^2.0.12",
     "shadcn-ui": "latest",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
