--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-react": "^8.0.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.24",
+    "googleapis": "^134.0.0",
     "input-otp": "^1.0.1",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
@@ -74,6 +75,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
-  }
+    "eslint-config-next": "14.1.3",
+    "@types/bun": "latest"
+  },
+  "module": "index.ts",
+  "type": "module"
 }
